:bug: Pushing RSVP down a bit further on mobile devices. Clickable envelope only when registry is not open.

--- a/static/scss/rsvp.scss
+++ b/static/scss/rsvp.scss
@@ -6,6 +6,10 @@
   display: grid;
   place-items: center;
 
+  @media (max-width: map-get($breakpoints, breakpoint-tablet)) {
+    margin-top: 20vh;
+  }
+
 }
 
 .paragraph-text {
